force-app/main/default/objects/Open_Help_Desk_Case__c/Open_Help_Desk_Case__c.object-meta.xml
<CustomObject>
    <label>Open Help Desk Case</label>
    <nameField>
        <label>Open Help Desk Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Help Desk Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>