force-app/main/default/objects/Open_Help_Desk_Case__c/fields/Account_Master_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Master_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Help Desk Cases</relationshipLabel>
    <relationshipName>Open_Help_Desk_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>