force-app/main/default/objects/Open_Help_Desk_Case__c/fields/gems_customer_name__c.field-meta.xml
<CustomField>
    <fullName>gems_customer_name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>