force-app/main/default/objects/Open_Help_Desk_Case__c/fields/more_then_24_hours__c.field-meta.xml
<CustomField>
    <fullName>more_then_24_hours__c</fullName>
    <label>More Then 24 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>