force-app/main/default/objects/Open_Help_Desk_Case__c/fields/priority_code__c.field-meta.xml
<CustomField>
    <fullName>priority_code__c</fullName>
    <label>Priority Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>